--- a/.github/workflows/update_ratings.yml
+++ b/.github/workflows/update_ratings.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           cache: "pip"
+
+      - name: Install Python Dependencies
         run: pip install fire requests python-dotenv tqdm
 
       - name: Copy Secrets
