--- a/.github/workflows/update_ratings.yml
+++ b/.github/workflows/update_ratings.yml
@@ -36,9 +36,16 @@ jobs:
         run: |
           python scripts/update_ratings.py assets/YMS_ratings.json yms_ratings.json
 
+      - name: Check for Changes
+        id: check_changes
+        run: |
+          git add assets/YMS_ratings.json
+          git diff --staged --quiet || echo "::set-output name=changes::true"
+
       - name: Commit and Push Changes
+        if: steps.check_changes.outputs.changes == 'true'
         run: |
           git config --global user.name 'tachyon-orca'
           git config --global user.email '152846110+tachyon-orca@users.noreply.github.com'
-          git commit -a -m "Update ratings"
+          git commit -m "Update ratings"
           git push
