--- a/.github/workflows/update_assets.yml
+++ b/.github/workflows/update_assets.yml
@@ -32,14 +32,22 @@ jobs:
         run: |
           docker run --rm --mount type=bind,source="$(pwd)",target=/mnt/output tachyorca/imdb_user_crawler ratings -o /mnt/output/yms_ratings.json
 
-      - name: Run Update Script
+      - name: Update Ratings
         run: |
           python scripts/update_ratings.py assets/YMS_ratings.json yms_ratings.json
+
+      - name: Fetch Watchlist
+        run: |
+          docker run --rm --mount type=bind,source="$(pwd)",target=/mnt/output tachyorca/imdb_user_crawler watchlist -o /mnt/output/yms_watchlist.json
+
+      - name: Update Watchlist
+        run: |
+          python scripts/update_ratings.py assets/YMS_watchlist.json yms_watchlist.json True
 
       - name: Check for Changes
         id: check_changes
         run: |
-          git add assets/YMS_ratings.json
+          git add assets/YMS_ratings.json assets/YMS_watchlist.json
           git diff --staged --quiet || echo "::set-output name=changes::true"
 
       - name: Commit and Push Changes
@@ -47,5 +55,5 @@ jobs:
         run: |
           git config --global user.name 'tachyon-orca'
           git config --global user.email '152846110+tachyon-orca@users.noreply.github.com'
-          git commit -m "Update ratings"
+          git commit -m "Update ratings & watchlist"
           git push
