change trigger to schedule

--- a/.github/workflows/update_assets.yml
+++ b/.github/workflows/update_assets.yml
@@ -1,9 +1,8 @@
 name: Update Ratings
 
 on:
-  push:
-    branches:
-      - workflows
+  schedule:
+    - cron: '0 21 * * *'
 
 jobs:
   update-ratings:
