--- a/.github/workflows/update_assets.yml
+++ b/.github/workflows/update_assets.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: '0 21 * * *'
 
+permissions:
+  contents: write
+
 jobs:
   update-ratings:
     runs-on: ubuntu-latest
@@ -18,6 +21,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
+          python-version: "3.12"
           cache: "pip"
 
       - name: Install Python Dependencies
@@ -47,7 +51,7 @@ jobs:
         id: check_changes
         run: |
           git add assets/YMS_ratings.json assets/YMS_watchlist.json
-          git diff --staged --quiet || echo "::set-output name=changes::true"
+          git diff --staged --quiet || echo "changes=true" >> $GITHUB_OUTPUT
 
       - name: Commit and Push Changes
         if: steps.check_changes.outputs.changes == 'true'
