--- a/.github/workflows/update_assets.yml
+++ b/.github/workflows/update_assets.yml
@@ -1,8 +1,8 @@
 name: Update Assets
 
 on:
-  schedule:
-    - cron: '0 21 * * *'
+  # schedule:
+  #   - cron: '0 21 * * *'
   workflow_dispatch:
 
 permissions:
