Update workflow docker config

--- a/.github/workflows/update_assets.yml
+++ b/.github/workflows/update_assets.yml
@@ -1,8 +1,8 @@
 name: Update Assets
 
 on:
-  # schedule:
-  #   - cron: '0 21 * * *'
+  schedule:
+    - cron: '0 21 * * *'
   workflow_dispatch:
 
 permissions:
@@ -34,7 +34,7 @@ jobs:
 
       - name: Fetch Ratings
         run: |
-          docker run --rm --mount type=bind,source="$(pwd)",target=/mnt/output tachyorca/imdb_user_crawler ratings -o /mnt/output/yms_ratings.json
+          docker run --rm --mount type=bind,source="$(pwd)",target=/mnt/output tachyorca/imdb_user_crawler get_ratings.py /mnt/output/yms_ratings.json
 
       - name: Update Ratings
         run: |
@@ -42,7 +42,7 @@ jobs:
 
       - name: Fetch Watchlist
         run: |
-          docker run --rm --mount type=bind,source="$(pwd)",target=/mnt/output tachyorca/imdb_user_crawler watchlist -o /mnt/output/yms_watchlist.json
+          docker run --rm --mount type=bind,source="$(pwd)",target=/mnt/output tachyorca/imdb_user_crawler download_watchlist.py /mnt/output/yms_watchlist.json
 
       - name: Update Watchlist
         run: |
