--- a/.github/workflows/update_assets.yml
+++ b/.github/workflows/update_assets.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   update-ratings:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout Repository
